--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.elasticsearch.uris=http://101.43.70.148:9200
 spring.elasticsearch.socket-timeout=10s
-
-spring.elasticsearch.username=
-spring.elasticsearch.password=
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=Root2020!
 #logging.level.org.springframework.data.elasticsearch.client.WIRE = trace
-
 server.port=8080
+logging.level.org.springframework.data.elasticsearch.core=debug
+logging.level.root=info
